# ITLabAI

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/workflows/: ci.yml  nightly.yml  static-analysis.yml
app/: CMakeLists.txt  Graph.cpp  alexnet.cpp  app.cpp  reader_img.cpp
app/Accuracy/: CMakeLists.txt  acc.cpp  accuracy_check.cpp  accuracy_check.hpp
app/AccuracyImgNet/: CMakeLists.txt  accimgnet.cpp
app/AlexNet/: CMakeLists.txt  alexnet.cpp  alexnet.py  alexnet_src.cpp  json_converter.py  model_summary.txt  parser.py  reader_weights.cpp  reader_weights_sample.cpp
app/Converters/: CMakeLists.txt  parser.py  parser_onnx.py  reader_weights_sample.cpp  reader_weights_sample_onnx.cpp  requirements.txt
app/Graph/: CMakeLists.txt  acc_check_mnist.cpp  build.cpp  build.hpp  graph_build.cpp
app/ReaderImage/: CMakeLists.txt  reader_img.cpp  reader_img_s.cpp
app/accuracy_app/: accuracy_check.cpp
app/pref/: CMakeLists.txt  timertest.cpp
cmake/: opencv_config.cmake
docs/json_for_test/: valid.json
include/: CMakeLists.txt  Graph.hpp  benchmarking.hpp  timer.hpp
include/Graph/: CMakeLists.txt  Graph.hpp
include/Weights_Reader/: CMakeLists.txt  reader_weights.hpp  reader_weights_onnx.hpp
include/alexnet/: CMakeLists.txt  alexnet.hpp  reader_tf_model.hpp
include/graph/: CMakeLists.txt  graph.hpp
include/layers/: BinaryOpLayer.hpp  CMakeLists.txt  ConcatLayer.hpp  ConvLayer.hpp  DropOutLayer.hpp  EWLayer.hpp  FCLayer.hpp  FlattenLayer.hpp  InputLayer.hpp  Layer.hpp  Matrix.hpp  MulLayer.hpp  NormLayer.hpp  OutputLayer.hpp  PoolingLayer.hpp  ReduceLayer.hpp  ReduceSumLayer.hpp  Shape.hpp  SplitLayer.hpp  Tensor.hpp  TransposeLayer.hpp
include/perf/: CMakeLists.txt  benchmarking.hpp
include/read/: CMakeLists.txt  Reader_img.hpp  reader_img.hpp
src/: CMakeLists.txt  Graph.cpp  benchmarking.cpp
src/Graph/: CMakeLists.txt  Graph.cpp
src/Weights_Reader/: reader_weights.cpp  reader_weights_onnx.cpp
src/alexnet/: alexnet_src.cpp  reader_tf_model.cpp
src/graph/: CMakeLists.txt  graph.cpp
src/layers/: BinaryOpLayer.cpp  CMakeLists.txt  ConCatLayer.cpp  ConcatLayer.cpp  ConvLayer.cpp  DropOutLayer.cpp  EWLayer.cpp  FCLayer.cpp  FlattenLayer.cpp  Layer.cpp  MulLayer.cpp  NormLayer.cpp  OutputLayer.cpp  PoolingLayer.cpp  ReduceLayer.cpp  ReduceSumLayer.cpp  Shape.cpp  SplitLayer.cpp  Tensor.cpp  TransposeLayer.cpp
src/perf/: CMakeLists.txt  benchmarking.cpp
src/read/: Reader_img.cpp  reader_img.cpp
test/: CMakeLists.txt  test.cpp
test/benchmarking/: test_accuracy.cpp  test_benchmark.cpp  test_layers_time.cpp  test_throughput.cpp  test_timer.cpp
test/graph/: test_graph.cpp
test/inference/: test_inference.cpp
test/model_read/: model_read.cpp
test/single_layer/: test_binaryoplayer.cpp  test_concatlayer.cpp  test_convlayer.cpp  test_dropoutlayer.cpp  test_ewlayer.cpp  test_fclayer.cpp  test_flattenlayer.cpp  test_inlayer.cpp  test_layers.cpp  test_mullayer.cpp  test_outputlayer.cpp  test_poolinglayer.cpp  test_reducelayer.cpp  test_reducesumlayer.cpp  test_splitlayer.cpp  test_tensor.cpp  test_transposelayer.cpp
test/test_read/: CMakeLists.txt  test_read.cpp
